Adding directions to search page with associated new MapquestService

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,5 @@
 <h1 id='name'><%= @station.name %></h1>
-<p id='address'>Address:<br>
-   <%= @station.street %></p>
-   <%= @station.city %>, <%= @station.state %>
+<p id='address'>Address: <%= @station.address %></p>
 <p id='fuel_type'>Fuel Type: <%= @station.fuel_type %></p>
 <p id='access_times'>Access Times: <%= @station.access_times %></p>
+<p>Directions: <%= @directions %></p>
