--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,3 +3,4 @@
 <p id='fuel_type'>Fuel Type: <%= @station.fuel_type %></p>
 <p id='access_times'>Access Times: <%= @station.access_times %></p>
 <p>Directions: <%= @directions %></p>
+<p>Distance: <%= @distance %></p>
